@@ -19,6 +19,8 @@ Unreleased : ImpressCMS 1.1 "???" Alpha
 
 - Improved : The pm form to use the selected editor. (the_rplima)
 - Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
+- Improved : System admin page markup (skenow)
+
 - Changed : Moved the Smarty library from /class to /libraries. (nekro)
 - Changed : Moved the PHPmailer library from /class to /libraries. (nekro)
 
